--- a/tutorial/1.get_monster_info.md
+++ b/tutorial/1.get_monster_info.md
@@ -11,3 +11,154 @@ ce查内存神器,还能调试
 查看反汇编静态代码用的
 
 ## 0x02:找到修改血量代码位置
+
+首先找到怪物的血量地址,如下图.
+
+![find_hp](https://raw.githubusercontent.com/shanlihou/hack_warspear/master/img/find_hp.png)  
+如上图所示,按照上图位置右键"找出是什么改写了这个位置",并点击附加到进程.  
+在附加到进程后攻击这个怪物.这时候会看到下图
+![opr_addr](https://raw.githubusercontent.com/shanlihou/hack_warspear/master/img/find_hp.png)  
+图中地址00570FFB就是修改怪物血量的代码位置
+
+## 0x03:找到调用堆栈
+
+还记得我们上次讲怎么用ce+lua吗.  
+我们编写如下脚本  
+代码位置:$(ROOT)/info/find_hp_base.lua
+
+```lua
+function print_stack(ebp, deep) --打印堆栈的函数,返回值是堆栈调用过程
+    if deep == 0
+    then
+        return ""
+    end
+    local ebp_4 = readInteger(ebp + 4)
+    local str_ret = string.format("%x->", ebp_4)
+    local next_ebp = readInteger(ebp)
+    str_ret = str_ret .. print_stack(next_ebp, deep - 1)
+    return str_ret
+end
+
+function clear_debug() --清除所有已经添加的断点
+    local tbl = debug_getBreakpointList()
+    if tbl == nil
+    then
+        return
+    end
+    for i,v in ipairs(tbl) do
+        print(string.format("%4d 0x%X",i,v))
+        debug_removeBreakpoint(v)
+    end
+end
+
+function debugger_onBreakpoint() --默认断点函数
+    if EIP == 0x570FFB -- 这个位置是咱们刚刚获得的修改怪物血量的代码位置
+    then
+        local ret = print_stack(EBP, 10)
+        print(ret)
+    else
+        print("not found")
+    end
+    return 1
+end
+
+clear_debug()
+debug_setBreakpoint(0x570FFB)
+```
+
+好,我们现在拿着如上代码在ce上执行.执行完后,就可以操作玩家打怪了.  
+在玩家攻击后会看到如下图打印
+
+![attack_stack](https://raw.githubusercontent.com/shanlihou/hack_warspear/master/img/find_hp.png)
+
+上图中红框框出来的这个打印就是一次扣血的调用过程,我们就拿着这个找基址
+70e76a->70fa54->747e0e->87c579->86052b->75b247ab->75b02aac->75b044db->75b041e0->8602c6-> 
+
+## 0x04:找到基址
+
+现在用immunity debugger打开我们的游戏并定位到位置0x570FFB
+
+![find_base](https://raw.githubusercontent.com/shanlihou/hack_warspear/master/img/find_hp.png)
+
+我们从上图1位置(0x570FFB)可以看出血量应该是保存在esi+0xf4这个位置,那么我们现在就要找esi的值是怎么来的  
+我们网上看图2位置(0x570ff2)esi是从eax赋值的,那么就要找eax怎么来的.  
+在网上看图3位置有一个函数调用,一般汇编的函数如果有返回值的话是保存在eax的.所以我们要跟进去看是不是这个函数返回的.
+
+![btree](https://raw.githubusercontent.com/shanlihou/hack_warspear/master/img/find_hp.png)
+
+上图是进入函数0x715720后,的相关内容,我给大家翻译一下上面的内容,下面是翻译后的c++代码.
+
+```c++
+eax = *(ecx + 0x30);
+eax = *(eax);
+edx = *(ebp + 0x8);
+while (1):
+{	
+    ecx = *(eax + 0x10);// MOV ECX,DWORD PTR DS:[EAX+10]
+	if (ecx > edx){//CMP ECX,EDX;    JBE SHORT warspear.0071573C
+		eax = *(eax + 0x4);
+		continue;
+    }
+	else if (exc < edx){//JNB SHORT warspear.0071574B
+		eax = *(eax + 0x8);
+		continue;
+    }
+	else{
+		eax = *(eax + 0x14);
+		break;
+    }
+}
+```
+
+有一定c/c++语言功底的朋友不难看出,上面代码是一段对数据结构二叉树的查找过程.所以我们可以确定了,这款游戏的怪物信息是使用二叉树来存储的.  
+把上图的eax想象成一个节点.那么eax+0x10这个位置存储的就可能是类似id的值,然后跟edx这个目标值来比较.  
+如果当前id > edx 则从右节点继续找(eax + 0x04)
+如果当前id < edx 则从左节点继续找(eax + 0x08)
+如果相等就用eax = *(eax + 0x14)然后返回.
+
+所以从上图汇编代码我们得到三个信息:  
+1.a的确是返回值  
+2.怪物信息存在一个二叉树里  
+3.从第一行(MOV EAX,DWORD PTR DS:[ECX+38])看出,咱门下一个追踪目标就是这个ecx了
+
+我们继续顺着上面汇编图的4,5,6会发现我们已经找到了基址(哈哈,很尴尬,前面的查看堆栈貌似没啥用啊,没关系,下次讲一定会把它用上的.因为我之前完成的时候已经过去很久了,写这篇文章时候是边做边写的.所以没想到没用上)  
+
+## 0x05:测试基址是否正确
+
+我们编写如下lua代码  
+代码位置
+
+```lua
+function handleNode(value, ptr, hp)
+    print(string.format('%x,%x,%d', value, ptr, hp))
+end
+
+function read_tree(node, func)--读取二叉树结构体的代码
+    if (node == 0 or node == nil)
+    then
+        return
+    end
+
+    local left = readInteger(node + 4)
+    local right = readInteger(node + 8)
+    local value = readInteger(node + 0x10)
+    local ptr = readInteger(node + 0x14)
+    local hp = readInteger(ptr + 0xf4) --这里存的就是血量了.对应上面汇编代码中的(esi + f4)
+    read_tree(left, func)
+    read_tree(right, func)
+    func(value, ptr, hp)
+end
+
+local g_base = readInteger(0x9a45b0)
+local tmp_ptr = readInteger(g_base + 0x10)
+tmp_ptr = readInteger(tmp_ptr + 0x38)
+local root = readInteger(tmp_ptr)
+read_tree(root, handleNode)
+```
+
+把上面代码放在ce中执行就会看到打印如下
+
+![my_hp](https://raw.githubusercontent.com/shanlihou/hack_warspear/master/img/find_hp.png)
+
+上图中1已经把我自己的hp打印出来了.
+
