--- a/tutorial/2.attack_call/2.attack_call.md
+++ b/tutorial/2.attack_call/2.attack_call.md
@@ -50,7 +50,7 @@ function clear_debug()
 end
 
 function debugger_onBreakpoint()
-    if EIP == 0x7ae3d2 and EDI == 0x8ab5f68 --这里之所以需要判断edi是因为这个地址可能是某个函数内的地址,这个函数可能被不同函数调用,为了找到从攻击一直调用到这里的堆栈,我们在这里判断一下.
+    if EIP == 0x7d8495 and ECX == 0x8aac398
     then
         local ret = print_stack(EBP, 10)
         print(ret)
@@ -60,7 +60,7 @@ end
 
 clear_debug()
 print(1)
-debug_setBreakpoint(0x7ae3d2)
+debug_setBreakpoint(0x7d8495)
 ```
 
 使用上面的代码得到如下的堆栈信息  
@@ -70,3 +70,73 @@ debug_setBreakpoint(0x7ae3d2)
 ## 0x02:找到攻击函数地址
 
 我们现在先编写代码给上述几个节点分别加代码.
+
+```lua
+function print_stack(ebp, deep)
+    if deep == 0
+    then
+        return ""
+    end
+    local ebp_4 = readInteger(ebp + 4)
+    local str_ret = string.format("%x->", ebp_4)
+    local next_ebp = readInteger(ebp)
+    str_ret = str_ret .. print_stack(next_ebp, deep - 1)
+    return str_ret
+end
+
+function clear_debug()
+    local tbl = debug_getBreakpointList()
+    if tbl == nil
+    then
+        return
+    end
+    for i,v in ipairs(tbl) do
+        print(string.format("%4d 0x%X",i,v))
+        debug_removeBreakpoint(v)
+    end
+end
+
+function debugger_onBreakpoint()
+         if EIP == 0x7d8430
+         then
+             print(string.format("just enter:esp:0x%X", readInteger(ESP)))
+         elseif EIP == 0x7d8482
+         then
+             local ecx_4f74 = readInteger(ECX + 0x4f74)
+             local ecx_c4 = readInteger(ECX + 0xc4)
+             print(string.format("will go1:edx:0x%X, esi:0x%X, ecx_4f74:0x%X", EDX, ESI, ecx_4f74))
+         elseif EIP == 0x7d8487
+         then
+             print(string.format("will go2:esi:0x%X", ESI))
+         elseif EIP == 0x7d8495
+         then
+             print("go 3")
+         end
+
+    return 1
+end
+
+clear_debug()
+print(1)
+--debug_setBreakpoint(0x7d8430)
+--debug_setBreakpoint(0x7d8495)
+--debug_setBreakpoint(0x7d8487)
+--debug_setBreakpoint(0x7d8482)
+```
+
+00785657 - 74 0D - je warspear.exe+385666
+00785659 - 8B 06  - mov eax,[esi]
+0078565B - 89 8E AC020000  - mov [esi+000002AC],ecx <<
+00785661 - 8B CE  - mov ecx,esi
+00785663 - FF 50 4C  - call dword ptr [eax+4C]
+
+EAX=00927838
+EBX=0DD2F370
+ECX=00000001
+EDX=0043E7E6
+ESI=0F14A8A0
+EDI=08AC9B28
+ESP=0019F80C
+EBP=0019F814
+EIP=00785661
+
