--- a/tutorial/2.attack_call/2.attack_call.md
+++ b/tutorial/2.attack_call/2.attack_call.md
@@ -140,3 +140,10 @@ ESP=0019F80C
 EBP=0019F814
 EIP=00785661
 
+70e0b4->70fa42->747e0e->87c579->86052b->766147ab->765f2aac->765f44db->765f41e0->8602c6-> 
+咱们顺着这个流程来分析
+frame 0: 78565B -> 785610
+frame 1:70e0b4
+0x70e090返回值eax = 0x1c时候会走攻击流程,且调用函数地址为0x8E3660
+
+0x70e08c
