--- a/tutorial/1.get_monster_info/1.get_monster_info.md
+++ b/tutorial/1.get_monster_info/1.get_monster_info.md
@@ -99,7 +99,7 @@ debug_setBreakpoint(0x570FFB)
 
 上图是进入函数0x715720后,的相关内容,我给大家翻译一下上面的内容,下面是翻译后的c++代码.
 
-```c++
+```cpp
 eax = *(ecx + 0x30);
 eax = *(eax);
 edx = *(ebp + 0x8);
