--- a/tutorial/3.pick/3.pick.md
+++ b/tutorial/3.pick/3.pick.md
@@ -135,6 +135,46 @@ void EntityBase::searchDead()
 
 ![drop_list](https://gitee.com/shanlihou/image_bed/raw/master/warspear_03/drop_list.png)  
 
+## 0x04: 寻找拾取的代码地址(就是点击如上下一页)
+
+为了找到拾取代码的地址,只能用老方法,通过send函数调用堆栈来找,这里跟上一章碰到的问题也一样,send函数只是从消息队列中取出消息来发送,要想找到拾取代码位置,还是需要找到插入消息队列的函数地址.
+
+分析后发现如下三个插入到消息队列的操作,调用堆栈如下,在看这三个堆栈都经过这个6f0e25地址.  
+并且这个地址只会经过一次,所以到这里已经得到拾取函数的地址了,就是这个地址6F00B0.  
+
+eax:0x8  
+50dd22->7a714e->7a44ca->6eea24->6f0110->6f0e25->7e8b65->7a7222->7af33c->7a73e0->7bf0a7->747b18->8699b2->87b817->4be438->860521->76b647ab->76b42aac->  
+eax:0x14  
+50dd1c->7a714e->6eeb25->6f0110->6f0e25->7e8b65->7a7222->7af33c->7a73e0->7bf0a7->747b18->8699b2->87b817->4be438->860521->76b647ab->76b42aac->76b444db->  
+eax:0x14  
+50dd1c->7a714e->6eeeb8->6f0fa2->7e8e48->6f0110->6f0e25->7e8b65->7a7222->7af33c->7a73e0->7bf0a7->747b18->8699b2->87b817->4be438->860521->76b647ab->  
+
+## 0x05: 分析拾取代码的调用参数
+
+现在函数已经有了,下面就是传参了,首先在6f0e20这里下断,观察发现,入参eax一直为0,剩下的就是ecx的获取了.
+根据上面已经获取的堆栈分析后,得到如下获取ecx值得过程.
+
+```cpp
+        DWORD a = 0x9A5798;
+        a = *(DWORD*)(a + 0xc);
+        a = *(DWORD*)(a + 0x0);
+        a = *(DWORD*)(a + 0x7c);
+        a = *(DWORD*)(a + 0x40);
+        a += 0x550c;
+        a = *(DWORD*)(a + 0x1A98);
+        a = *(DWORD*)(a + 0x18);
+        __asm
+        {
+            mov ecx, 0x0 
+            push ecx
+            mov ecx, a
+            mov eax, 0x6f00b0
+            CALL eax
+        }
+```
+
+可惜编写了如上代码后,发现这个最终获取到的a并不是我们想要的,看来这个值是在另一个流程里赋值进去的.
+现在再用ce对如上获取到a这个内存地址查是谁改写了这个值,得到如下这个地址,可以看到这里把值放进了1a98,那应该就是这个地址了.
 
 007BECA1 - 8B EC  - mov ebp,esp
 007BECA3 - 8B 45 08  - mov eax,[ebp+08]
@@ -152,4 +192,35 @@ ESP=0019F85C
 EBP=0019F85C
 EIP=007BECAC
 
+再对如上地址加断点获取到如下堆栈.  
+
+7a74f8->7af2f9->7a73e0->7ae053->7af2a3->7e8c79->6f0c50->7bf179->747b18->8699b2->87b817->4be438->  
+
+最终我们根据堆栈分析出了如下这个调用过程
+
+```cpp
+        DWORD a = 0x9A5798;
+        a = *(DWORD*)(a + 0xc);
+        a = *(DWORD*)(a + 0x0);
+        a = *(DWORD*)(a + 0x7c);
+        a = *(DWORD*)(a + 0x40);
+        a += 0x550c;
+        a = *(DWORD*)(a + 0x10); 
+        a = *(DWORD*)(a + 0x8); 
+        a += 8; 
+        a = *(DWORD*)(a + 0x8); 
+        a = *(DWORD*)(a + 20); 
+        a = *(DWORD*)(a + 0x18); 
+
+        __asm
+        {
+            mov ecx, 0x0 
+            push ecx
+            mov ecx, a
+            mov eax, 0x6f00b0
+            CALL eax
+        }
+```
+
+用了如上代码后,大功告成
 
